setup cart and product in api, setup db connection

--- a/project/apps/api/tsconfig.app.json
+++ b/project/apps/api/tsconfig.app.json
@@ -4,8 +4,9 @@
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
     "types": ["node"],
+    "composite": false,
     "emitDecoratorMetadata": true,
-    "target": "es2015"
+    "target": "es2015",
   },
   "exclude": ["**/*.spec.ts", "**/*.test.ts"],
   "include": ["**/*.ts"]
