--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,4 +29,4 @@ jobs:
     - run: cd project
     - run: npm ci
     - run: npm run build-local --if-present
-    - run: npm test
+    - run: npm run test
