--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: cd project
     - run: npm ci
+      working-directory: ./project
     - run: npm run build-local --if-present
+      working-directory: ./project
     - run: npm run test
+      working-directory: ./project
