--- a/project/package.json
+++ b/project/package.json
@@ -2,8 +2,8 @@
   "name": "project",
   "version": "0.0.0",
   "license": "MIT",
-  "engines" : {
-    "node" : "16.15.0"
+  "engines": {
+    "node": "16.15.0"
   },
   "scripts": {
     "ng": "nx",
@@ -32,6 +32,7 @@
     "@nestjs/typeorm": "^8.1.4",
     "@nrwl/angular": "13.3.11",
     "class-validator": "^0.13.2",
+    "concurrently": "^7.2.2",
     "ng-zorro-antd": "^13.3.2",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
