--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependancy-path: './project/package-lock.json'
     - run: npm ci
       working-directory: ./project
     - run: npm run build-local --if-present
